[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gohybrid-mcp"
version = "0.1.0"
description = "MCP server and Claude connector for fitness data — intervals.icu and Strava"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
keywords = ["mcp", "fitness", "strava", "intervals", "claude", "ai", "coaching"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "starlette>=0.37.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
]

[project.urls]
Homepage = "https://github.com/AnshTanwar/gohybrid-backend"
Repository = "https://github.com/AnshTanwar/gohybrid-backend"
Issues = "https://github.com/AnshTanwar/gohybrid-backend/issues"

[project.scripts]
gohybrid-mcp = "gohybrid_mcp.server:main"

[tool.setuptools]
package-dir = { "" = ".." }
packages = ["gohybrid_mcp"]

[tool.setuptools.package-data]
gohybrid_mcp = ["connect.html"]
